# YearCalendarV1

./: .gitignore  Algorithm.txt  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.CC88767A03C1EDB1.idx  year_calendar_functs.cpp.BA7CAA81777DFD0F.idx  year_calendar_functs.h.C934F24E0BDC2C03.idx
Header/: year_calendar_functs.h  year_calendar_functs.hpp
Source/: main.cc  main.cpp  year_calendar_functs.cc  year_calendar_functs.cpp
